# microversion-parse

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
microversion_parse/: __init__.py  middleware.py
microversion_parse/tests/: test_extract_version.py  test_get_version.py  test_headers_from_wsgi_environ.py  test_middleware.py  test_webob.py
microversion_parse/tests/gabbits/: middleware.yaml  simple.yaml
